--- a/TGC/localisation/00_events_0001000.csv
+++ b/TGC/localisation/00_events_0001000.csv
@@ -894,6 +894,14 @@ EVTNAME8019;A proper flag for Brazil;;;;;;;;;;;;;
 EVTDESC8019;Surely, we need a proper flag if we want to be a proper republic, not this american knockoff. \n\n "A yellow rhombus on a green field, with the blue celestial sphere in the center, crossed by a white band diagonally descending from left to right, bearing the motto - Order and Progress - and punctuated by twenty-one stars, including those of the Southern Cross constellation, arranged according to their astronomical position, representing the twenty states of the Republic and the Neutral Municipality.";;;;;;;;;;;;;
 EVTOPTA8019;Perfect!;;;;;;;;;;;;;
 EVTOPTB8019;Actually, I like the current one...;;;;;;;;;;;;;
+EVTNAME8050;We united the Kingdom, but now what?;;;;;;;;;;;;;
+EVTDESC8050;The idea of an united $COUNTRY$ is.... "dicey" at best. The portuguese elites are not in favor idea of a Brazilian state with the same status as mainland Portugal, the Brazilians are resistant to the idea of being controlled by an european capital, and there's a lingering fear of Lisboa reducing their status back to a colony. \n\n Trying to appeal to both sides will be hard, but doable if we play our cards right, but there are other less orthodox options...;;;;;;;;;;;;;
+EVTOPTA8050;We must seek balance.;;;;;;;;;;;;;
+EVTOPTB8050;Move the capital to Rio de Janeiro, this land will be the new heart of the empire.;;;;;;;;;;;;;
+EVTOPTC8050;The brazilians must know their place in the pecking order.;;;;;;;;;;;;;
+EVTNAME8051;Dreams of Empire;;;;;;;;;;;;;
+EVTDESC8051;The dreams of a united $COUNTRY$ are now slowly fading away. The empire is just too big to keep itself together, keeping an country of this size with spawning across multiple continents became a massive task, and we simply became too unstable to be a coherent government. \n\nThere's nothing to be done at this point.;;;;;;;;;;;;;
+EVTOPTA8051;So be it.;;;;;;;;;;;;;
 EVTNAME8100;Farrapos pushed back!;;;;;;;;;;;;;x
 EVTDESC8100;Our army managed to push back the farraupilha army and secure our land back! Another triumph standing as a testament to the unyielding commitment and sacrifice of our soldiers.;;;;;;;;;;;;;x
 EVTOPTA8100;This land is rightfully ours!;;;;;;;;;;;;;x
