--- a/TGC/localisation/00_tooltips.csv
+++ b/TGC/localisation/00_tooltips.csv
@@ -56,3 +56,4 @@ become_sul;Become §BRio-Grandense Republic§b;;;;;;;;;;;;x
 brz_guyanas_buy;You will pay §Y50000§! pounds per province, up to §Y450000§! pounds for all of them.§b;;;;;;;;;;;;x
 kpb_formation;Forming the United Kingdom will lock you out from Brazilian and Portuguese exclusive content.§b;;;;;;;;;;;;x
 french_schooling_tool_tip;The §GJules Ferry Laws§! and the §GFrench Language Schooling§! decisions are mutually exclusive.§b;;;;;;;;;;;;x
+brazil_colony;Turns Brazil back into a §YColony§!.\n;;;;;;;;;;;;x
