Adjusts to militancy

--- a/TGC/localisation/00_events_0001000.csv
+++ b/TGC/localisation/00_events_0001000.csv
@@ -895,7 +895,7 @@ EVTDESC8019;Surely, we need a proper flag if we want to be a proper republic, no
 EVTOPTA8019;Perfect!;;;;;;;;;;;;;
 EVTOPTB8019;Actually, I like the current one...;;;;;;;;;;;;;
 EVTNAME8050;We united the Kingdom, but now what?;;;;;;;;;;;;;
-EVTDESC8050;The idea of an united $COUNTRY$ is.... "dicey" at best. The portuguese elites are not in favor idea of a Brazilian state with the same status as mainland Portugal, the Brazilians are resistant to the idea of being controlled by an european capital, and there's a lingering fear of Lisboa reducing their status back to a colony. \n\n Trying to appeal to both sides will be hard, but doable if we play our cards right, but there are other less orthodox options...;;;;;;;;;;;;;
+EVTDESC8050;The idea of an united $COUNTRY$ is.... "dicey" at best. The Portuguese elites are not in favor of the idea of a Brazilian state with the same status as mainland Portugal, the Brazilians are resistant to the idea of being controlled by an european capital, and there's a lingering fear of Lisboa reducing their status back to a colony. \n\n Trying to appeal to both sides will be hard, but doable if we play our cards right, but there are other less orthodox options...;;;;;;;;;;;;;
 EVTOPTA8050;We must seek balance.;;;;;;;;;;;;;
 EVTOPTB8050;Move the capital to Rio de Janeiro, this land will be the new heart of the empire.;;;;;;;;;;;;;
 EVTOPTC8050;The brazilians must know their place in the pecking order.;;;;;;;;;;;;;
