KPB deals with brazilian slavery

--- a/TGC/localisation/00_events_0001000.csv
+++ b/TGC/localisation/00_events_0001000.csv
@@ -902,6 +902,10 @@ EVTOPTC8050;The brazilians must know their place in the pecking order.;;;;;;;;;;
 EVTNAME8051;Dreams of Empire;;;;;;;;;;;;;
 EVTDESC8051;The dreams of a united $COUNTRY$ are now slowly fading away. The empire is just too big to keep itself together, keeping an country of this size with spawning across multiple continents became a massive task, and we simply became too unstable to be a coherent government. \n\nThere's nothing to be done at this point.;;;;;;;;;;;;;
 EVTOPTA8051;So be it.;;;;;;;;;;;;;
+EVTNAME8052;Slavery in Brazil;;;;;;;;;;;;;
+EVTDESC8052;Now with the $COUNTRY$ reunited, we have a serious problem to solve: Slavery. \n\n Portugal had previously abolished slavery, but extending this to the new Brazilian lands could be a dangerous idea, Brazil is still in it's path to abolision and the economy is still dependant on slave work. \nWe can either free everyone cold turkey, and face the withdrawal, or we keep slavery on brazilians states, which is an obvious throwback in our politics.;;;;;;;;;;;;;
+EVTOPTA8052;Guess we go back to the old ways.;;;;;;;;;;;;;
+EVTOPTB8052;We shouldn't rollback our progress, extend abolition to the Brazilian lands.;;;;;;;;;;;;;
 EVTNAME8100;Farrapos pushed back!;;;;;;;;;;;;;x
 EVTDESC8100;Our army managed to push back the farraupilha army and secure our land back! Another triumph standing as a testament to the unyielding commitment and sacrifice of our soldiers.;;;;;;;;;;;;;x
 EVTOPTA8100;This land is rightfully ours!;;;;;;;;;;;;;x
