Imperial Family ban related events

--- a/TGC/localisation/00_events_0001000.csv
+++ b/TGC/localisation/00_events_0001000.csv
@@ -894,6 +894,13 @@ EVTNAME8019;A proper flag for Brazil;;;;;;;;;;;;;
 EVTDESC8019;Surely, we need a proper flag if we want to be a proper republic, not this american knockoff. \n\n "A yellow rhombus on a green field, with the blue celestial sphere in the center, crossed by a white band diagonally descending from left to right, bearing the motto - Order and Progress - and punctuated by twenty-one stars, including those of the Southern Cross constellation, arranged according to their astronomical position, representing the twenty states of the Republic and the Neutral Municipality.";;;;;;;;;;;;;
 EVTOPTA8019;Perfect!;;;;;;;;;;;;;
 EVTOPTB8019;Actually, I like the current one...;;;;;;;;;;;;;
+EVTNAME8020;Life the Imperial Family exile;;;;;;;;;;;;;
+EVTDESC8020;100 years of independence, it's a pretty big date. \n\nAfter the declaration of the republic, we exiled the Imperial Family, which fleed to Europe. But now, times have changed, another century, another era, and with the upcoming big "birthday", it may be the optimal time to bring them back.;;;;;;;;;;;;;
+EVTOPTA8020;Lift the ban;;;;;;;;;;;;;
+EVTOPTB8020;They can stay wherever they are.;;;;;;;;;;;;;
+EVTNAME8021;The Imperial Family returns;;;;;;;;;;;;;
+EVTDESC8021;The Imperial Family has returned from their Exile. And with them, the mortal remains of Dom Pedro II, our last monarch, which is finally resting peacefuly in his beloved fatherland.;;;;;;;;;;;;;
+EVTOPTA8021;May he rest in peace now.;;;;;;;;;;;;;
 EVTNAME8050;We united the Kingdom, but now what?;;;;;;;;;;;;;
 EVTDESC8050;The idea of an united $COUNTRY$ is.... "dicey" at best. The Portuguese elites are not in favor of the idea of a Brazilian state with the same status as mainland Portugal, the Brazilians are resistant to the idea of being controlled by an european capital, and there's a lingering fear of Lisboa reducing their status back to a colony. \n\n Trying to appeal to both sides will be hard, but doable if we play our cards right, but there are other less orthodox options...;;;;;;;;;;;;;
 EVTOPTA8050;We must seek balance.;;;;;;;;;;;;;
