Rise of the favelas

--- a/TGC/localisation/00_events_0001000.csv
+++ b/TGC/localisation/00_events_0001000.csv
@@ -1192,6 +1192,10 @@ EVTNAME8441;Antônio Conselheiro dies;;;;;;;;;;;;;x
 EVTDESC8441;Our beloved counselor, Antônio Conselheiro, has passed away calmly in the last night. The guiding voice for our theocracy is now gone.;;;;;;;;;;;;;x
 EVTOPTA8441;We will carry on his legacy.;;;;;;;;;;;;;x
 EVTOPTB8441;Please let's just end this madness.;;;;;;;;;;;;;x
+EVTNAME8442;Soldiers coming back from the Canudos War;;;;;;;;;;;;;x
+EVTDESC8442;During we Canudos War, we may have over promised benefits for our soldiers in order to boost their moral, including somewhat expensive stuff like housing. Looking back, we were in a bit of a dire spot, and we had to make promises we may not be able to keep now.;;;;;;;;;;;;;x
+EVTOPTA8442;Keep our part of the deal;;;;;;;;;;;;;x
+EVTOPTB8442;Waste of money, leave the soldiers to their own devices;;;;;;;;;;;;;x
 EVTNAME8455;Lackluster Revenue;;;;;;;;;;;;;x
 EVTDESC8455;The country is struggling to collect enough taxes to run things smoothly. To build up our reserves and make sure our public services work well, we need more money. The Economy Ministry suggests adding a new tax on imports. This can bring in more money and also help our national industries.;;;;;;;;;;;;;x
 EVTOPTA8455;So be it!;;;;;;;;;;;;;x
