--- a/TGC/localisation/00_modifiers.csv
+++ b/TGC/localisation/00_modifiers.csv
@@ -1611,3 +1611,5 @@ forced_vaccination;Compulsory Vaccination;;;;;;;;;;;;;x
 forced_vaccination_desc;;;;;;;;;;;;;;x
 antonio_conselheiro;Antônio Conselheiro;;;;;;;;;;;;;;x
 antonio_conselheiro_desc;Antônio Conselheiro now holds an important hole as counselor to the theocracy, which is fitting giving his surname.;;;;;;;;;;;;;x
+favelas;Favelas;;;;;;;;;;;;;;x
+favelas_desc;With the lack of proper housing, the poorest citizens, for a reason or another, end up in Favelas, crowded and poorly maintained housing on the outskirts of the city, usually on cliffsides and other places nobody else wants to build in.;;;;;;;;;;;;;;
