--- a/TGC/localisation/00_events_0001000.csv
+++ b/TGC/localisation/00_events_0001000.csv
@@ -1144,8 +1144,7 @@ EVTOPTD8412;Manaus, in the heart of the amazon, to bring progress across the cou
 EVTOPTE8412;We should build a city from scratch.;;;;;;;;;;;;;x
 EVTNAME8413;A new capital;;;;;;;;;;;;;x
 EVTDESC8413;After months of research, the capital proposal is ready. Said proposal is to construct a massive planned city in the heart of the country: Brasília. \n\nThis city would encompass all the essential elements a capital requires—meticulously planned layout, ease of navigation, impeccable organization, a central location, defensibility, and a safe distance from the major urban centers that are susceptible to uprisings. It would stand as a genuine marvel of urban planning, architectural design, and engineering prowess.;;;;;;;;;;;;;x
-EVTOPTA8413;So be it! Start the construction!;;;;;;;;;;;;;x
-EVTOPTB8413;We don't quite have the resources right now, we can start it later.;;;;;;;;;;;;;x
+EVTOPTA8413;Amazing. We will start as soon as we have the resources.;;;;;;;;;;;;;x
 EVTNAME8414;The Inauguration of Brasilia;;;;;;;;;;;;;x
 EVTDESC8414;In a grand and momentous ceremony, Brasília, the city of the future, was officially inaugurated today. Thousands of spectators from all over the country and abroad gathered in the heart of this meticulously planned urban marvel to witness the historic moment. \n\n This is the capital of a country who will lead the world.  This is the capital of a country of the future. We can rest assured that our nation will continue to progress, and this is one of many achievements to come.;;;;;;;;;;;;;x
 EVTOPTA8414;Ordem e Progresso!;;;;;;;;;;;;;x
@@ -1230,3 +1229,6 @@ EVTNAME8472;The Vaccine Revolt!;;;;;;;;;;;;;x
 EVTDESC8472;Discontent with the government, and now angered by the compulsory vaccination, the people went to the streets! $CAPITAL$ is in chaos! \n\n Vandalism is rampant, there's event rumors about a coup, the situation is getting out of control.;;;;;;;;;;;;;x
 EVTOPTA8472;Send in the police force and crush everyone.;;;;;;;;;;;;;x
 EVTOPTB8472;Fine, secede to their demands and halt the compulsory vaccination.;;;;;;;;;;;;;x
+EVTDESC8475;The village of Paraibuna emerged in the early nineteenth century due to the occupation of the region by families of farmers and settlers coming of the former gold producing region. The county of Paraibuna was separated from Barbacena on May 31, 1850, and was elevated to Paraibuna City in 1856, surpassing the city of São João del Rey. In 1865 the city of Paraibuna was renamed Juiz de Fora.;;;;;;;;;;;;;x
+EVTNAME8475;A City Flourishes;;;;;;;;;;;;;x
+EVTOPTA8475;May the city forever flourish.;;;;;;;;;;;;;x
