--- a/TGC/localisation/00_events_0001000.csv
+++ b/TGC/localisation/00_events_0001000.csv
@@ -1214,6 +1214,11 @@ EVTOPTA8232;Amazing.;;;;;;;;;;;;;x
 EVTNAME8233;$FROMCOUNTRY$ refuses!;;;;;;;;;;;;;x
 EVTDESC8233;$FROMCOUNTRY$ refused our proposal to buy their holding on the Guyanas! It seems they value this piece of jungle more than we expected.;;;;;;;;;;;;;x
 EVTOPTA8233;Damn them!;;;;;;;;;;;;;x
+EVTNAME8240;The Greater Brazilian Destiny;;;;;;;;;;;;;x
+EVTDESC8240;Brazil now sits on the South American Throne. Not only we have established ourselves as the local power, but we also got our place amonng the world's leading countries. But that's not enough, at any given point a Gran Colombia could arise, at any given point an foreign nation could get hold of one of neighbours to project influence in the region. We need to be sure this will never happen. \n\nDecades ago, during the first reign on behalf of Dom Pedro I, José Egídio Álvares de Almeida, better known was Baron of Santo Amaro, tried to persuade European powers in helping us install monarchies in the continent to stop republican ideas from spreading, it was a failed attempt, but it's an idea we can salvage, and of course, we don't need help from any European help this time.;;;;;;;;;;;;;x
+EVTOPTA8240;Brazil will reign absolute.;;;;;;;;;;;;;x
+EVTOPTB8240;We will think about this later.;;;;;;;;;;;;;x
+EVTOPTC8240;Are you utterly insane?;;;;;;;;;;;;;x
 EVTNAME8470;Poor Sanitation in $CAPITAL$;;;;;;;;;;;;;x
 EVTDESC8470;$CAPITAL$ is an old city. There’s no doubt its growth lacked a bit of planning. It’s a big, overpopulated, and crowded city. Sanitation has always been a problem in such old, unplanned cities, and as the population increases, it gets worse. At this point, we are seeing upwards of 10,000 deaths per year caused by sanitation-related diseases. Our capital is starting to get a bad name - a “plagued city,” they say.;;;;;;;;;;;;;x
 EVTOPTA8470;It's time to reorganize the city! Bulldoze everything down!;;;;;;;;;;;;;x
