--- a/TGC/localisation/00_decisions.csv
+++ b/TGC/localisation/00_decisions.csv
@@ -3565,3 +3565,13 @@ projeto_dantas_title;Project 48 A;;;;;;;;;;;;;;x
 projeto_dantas_desc;Project 48 A, or Dantas Project, is a somewhat radical project by the Senator Manuel Pinto de Sousa Dantas, which includes, among other things, agrarian reforms and the creation of ex-slave colonies, which will be eventually passed down to the former slaves. This is highly controversial and will cost us alot, given we will have to acquire plenty of land to make the colonies.;;;;;;;;;;;;;;x
 guiana_negotiations_title;Buy the Guayanas;;;;;;;;;;;;;;x
 guiana_negotiations_desc;While some may see this idea as merely an attempt to expand our borders, there's a further reason to justify our interest in the region: Acquiring the Guyanas would affirm us as the de facto power in the region, as no major european power would be holding land in South America. It would be extremely handy for us "friendly" quick them out.;;;;;;;;;;;;;;x
+santo_amaro_plans_title;Baron of Santo Amaro’s Plans;;;;;;;;;;;;;;x
+santo_amaro_plans_desc;Brazil now sits on the South American Throne. Not only we have established ourselves as the local power. \n\nBut that's not enough, we need to secure the Brazilian Greater Destiny as the New World's leading power.;;;;;;;;;;;;;;x
+santo_amaro_plans_la_plata_title;Baron of Santo Amaro’s Plans: La Plata;;;;;;;;;;;;;;x
+santo_amaro_plans_la_plata_desc;We already hold great control over La Plata region, as we have recovered the Cisplatina Province, conquered Paraguay and expanded our borders into the Parana River. But Argentina still exists, and the fertile lands of the Pambas are an extremely powerful resource, and we need to be sure controlled by us!;;;;;;;;;;;;;;x
+santo_amaro_plans_southern_cone_title;Baron of Santo Amaro’s Plans: The Southern Cone;;;;;;;;;;;;;;x
+santo_amaro_plans_southern_cone_desc;;;;;;;;;;;;;;;x
+santo_amaro_plans_peru_bolivia_title;Baron of Santo Amaro’s Plans: The Andine Nations;;;;;;;;;;;;;;x
+santo_amaro_plans_peru_bolivia_desc;;;;;;;;;;;;;;;x
+santo_amaro_plans_gran_colombia_title;Baron of Santo Amaro’s Plans: Gran Colombia;;;;;;;;;;;;;;x
+santo_amaro_plans_gran_colombia_desc;;;;;;;;;;;;;;;x
