--- a/TGC/localisation/00_decisions.csv
+++ b/TGC/localisation/00_decisions.csv
@@ -3570,8 +3570,8 @@ santo_amaro_plans_desc;Brazil now sits on the South American Throne. Not only we
 santo_amaro_plans_la_plata_title;Baron of Santo Amaro’s Plans: La Plata;;;;;;;;;;;;;;x
 santo_amaro_plans_la_plata_desc;We already hold great control over La Plata region, as we have recovered the Cisplatina Province, conquered Paraguay and expanded our borders into the Parana River. But Argentina still exists, and the fertile lands of the Pambas are an extremely powerful resource, and we need to be sure controlled by us!;;;;;;;;;;;;;;x
 santo_amaro_plans_southern_cone_title;Baron of Santo Amaro’s Plans: The Southern Cone;;;;;;;;;;;;;;x
-santo_amaro_plans_southern_cone_desc;;;;;;;;;;;;;;;x
+santo_amaro_plans_southern_cone_desc;With La Plata region under our control, we are in the position to fully control the Southern Cone. Chile and the Tierra del Fuego are somewhat isolated regions, but fully controling the Southern Clone, the Strait of Magellan and the Horn Cape can come in handy.;;;;;;;;;;;;;;x
 santo_amaro_plans_peru_bolivia_title;Baron of Santo Amaro’s Plans: The Andine Nations;;;;;;;;;;;;;;x
-santo_amaro_plans_peru_bolivia_desc;;;;;;;;;;;;;;;x
+santo_amaro_plans_peru_bolivia_desc;This region os the continent has suffered under stability problems, wars, civil wars, and a plethora of other problems, the idea of an Andine regional power is a bit far off, but that's not our only concern: The overall instability of the region can be an open door to foreign powers' influence. The only way to be sure they won't become a proxy for foreign powers is to make them a proxy of our own.;;;;;;;;;;;;;;x
 santo_amaro_plans_gran_colombia_title;Baron of Santo Amaro’s Plans: Gran Colombia;;;;;;;;;;;;;;x
-santo_amaro_plans_gran_colombia_desc;;;;;;;;;;;;;;;x
+santo_amaro_plans_gran_colombia_desc;The very idea of an independent and united Gran Colombia is dangerous. They have the land, the resources and the power to become a threat to our regional hegemony. By controlling and putting them under our feet we will kill any chance of a Gran Colombian power from rising in it's very roots.;;;;;;;;;;;;;;x
