--- a/TGC/localisation/00_events_0001000.csv
+++ b/TGC/localisation/00_events_0001000.csv
@@ -1085,7 +1085,7 @@ EVTNAME8221;The Treaty of Petrópolis;;;;;;;;;;;;;x
 EVTOPTA8221;Sounds like a good deal, we agree.;;;;;;;;;;;;;x
 EVTOPTB8221;No, Acre is a rightful part of $COUNTRY$.;;;;;;;;;;;;;x
 EVTNAME8301;The Slavery Question;;;;;;;;;;;;;x
-EVTDESC8301;Slavery have been an contenduous topic for a good while. The country is heavily dependent on slave work and the aristocracy may not like the idea of losing it's free labor. We need to examine the current status of the country before proceeding with abolition.;;;;;;;;;;;;;x
+EVTDESC8301;Slavery have been an contenduous topic for a good while. The country is heavily dependent on slave work and the aristocracy may not like the idea of losing it's free labor. We need to examine the current status of the country before proceeding with abolition.§!;;;;;;;;;;;;;x
 EVTOPTA8301;We are not yet ready.;;;;;;;;;;;;;x
 EVTOPTB8301;The time to abolish slavery is now!;;;;;;;;;;;;;x
 EVTDESC8305;The British Parliament has signed the Aberdeen Act into law, giving them authority to seize and search Brazilian vessels for any slave traders, enforcing an end to the illegal slave trade.;;;;;;;;;;;;;x
