--- a/TGC/localisation/00_events_0001000.csv
+++ b/TGC/localisation/00_events_0001000.csv
@@ -1219,6 +1219,11 @@ EVTDESC8240;Brazil now sits on the South American Throne. Not only we have estab
 EVTOPTA8240;Brazil will reign absolute.;;;;;;;;;;;;;x
 EVTOPTB8240;We will think about this later.;;;;;;;;;;;;;x
 EVTOPTC8240;Are you utterly insane?;;;;;;;;;;;;;x
+EVTNAME8240;Brazil spreads their wings;;;;;;;;;;;;;x
+EVTDESC8240;For the most part, we had good relations with our South American neighbours, the Brazilians. They were doing pretty good for themselves but it seems power is getting to their heads. Recently, they launched an offensive and installed a puppet government, and, by the information we have, it seems they are not planning to stop now. We have tolerated their expansionism for long enough, it's time to flash the big stick.;;;;;;;;;;;;;x
+EVTOPTA8240;So be it, give them a quick glance.;;;;;;;;;;;;;x
+EVTOPTB8240;This could be an opportunity....;;;;;;;;;;;;;x
+EVTOPTB8240;What happens in the south is none of our business.;;;;;;;;;;;;;x
 EVTNAME8470;Poor Sanitation in $CAPITAL$;;;;;;;;;;;;;x
 EVTDESC8470;$CAPITAL$ is an old city. There’s no doubt its growth lacked a bit of planning. It’s a big, overpopulated, and crowded city. Sanitation has always been a problem in such old, unplanned cities, and as the population increases, it gets worse. At this point, we are seeing upwards of 10,000 deaths per year caused by sanitation-related diseases. Our capital is starting to get a bad name - a “plagued city,” they say.;;;;;;;;;;;;;x
 EVTOPTA8470;It's time to reorganize the city! Bulldoze everything down!;;;;;;;;;;;;;x
