--- a/TGC/localisation/00_events_0001000.csv
+++ b/TGC/localisation/00_events_0001000.csv
@@ -1224,6 +1224,9 @@ EVTDESC8245;For the most part, we had good relations with our South American nei
 EVTOPTA8245;So be it, give them a quick glance.;;;;;;;;;;;;;x
 EVTOPTB8245;This could be an opportunity....;;;;;;;;;;;;;x
 EVTOPTC8245;What happens in the south is none of our business.;;;;;;;;;;;;;x
+EVTNAME8246;Uncle Sam is watching;;;;;;;;;;;;;x
+EVTDESC8246;After our last round of expansion, we caught the attention of the "other new world power", the United States of America. Via diplomatic routes, they advise us to stop what we are doing. They feel threatened by our progress and our might, they can not tolerate the idea of another new world power, let alone another new world power bigger than themselves. We must watch out carefully when doing our next moves, not only because of the yankees, but because other South American nations are now aware of our plans.;;;;;;;;;;;;;x
+EVTOPTA8246;Let them come.;;;;;;;;;;;;;x
 EVTNAME8470;Poor Sanitation in $CAPITAL$;;;;;;;;;;;;;x
 EVTDESC8470;$CAPITAL$ is an old city. There’s no doubt its growth lacked a bit of planning. It’s a big, overpopulated, and crowded city. Sanitation has always been a problem in such old, unplanned cities, and as the population increases, it gets worse. At this point, we are seeing upwards of 10,000 deaths per year caused by sanitation-related diseases. Our capital is starting to get a bad name - a “plagued city,” they say.;;;;;;;;;;;;;x
 EVTOPTA8470;It's time to reorganize the city! Bulldoze everything down!;;;;;;;;;;;;;x
