--- a/TGC/localisation/00_events_0001000.csv
+++ b/TGC/localisation/00_events_0001000.csv
@@ -1227,6 +1227,16 @@ EVTOPTC8245;What happens in the south is none of our business.;;;;;;;;;;;;;x
 EVTNAME8246;Uncle Sam is watching;;;;;;;;;;;;;x
 EVTDESC8246;After our last round of expansion, we caught the attention of the "other new world power", the United States of America. Via diplomatic routes, they advise us to stop what we are doing. They feel threatened by our progress and our might, they can not tolerate the idea of another new world power, let alone another new world power bigger than themselves. We must watch out carefully when doing our next moves, not only because of the yankees, but because other South American nations are now aware of our plans.;;;;;;;;;;;;;x
 EVTOPTA8246;Let them come.;;;;;;;;;;;;;x
+EVTNAME8247;Unneasy Alliance;;;;;;;;;;;;;x
+EVTDESC8247;The USA seems to be aware of our plans in South America, at first we were expecting them to be against our actions, but they actually proposed an alliance. We together against the Old World, in an alliance to make the New World the nations of the future.;;;;;;;;;;;;;x
+EVTOPTA8247;So be it, we in the south, them in the north!;;;;;;;;;;;;;x
+EVTOPTA8247;We don't need them, the New World is OURS alone.;;;;;;;;;;;;;x
+EVTNAME8248;Brazil accepts the offer!;;;;;;;;;;;;;x
+EVTDESC8248;The Brazilians have accepted our offer. I wonder what the Old World will think about this...;;;;;;;;;;;;;x
+EVTOPTA8248;Great!;;;;;;;;;;;;;x
+EVTNAME8249;Brazil rejects the offer!;;;;;;;;;;;;;x
+EVTDESC8249;The Brazilians have rejected our generous offer! We have no option but to stop them now, if they don't want to be with us in the top, we will be there alone.;;;;;;;;;;;;;x
+EVTOPTA8249;So be it, they left us with no other options.;;;;;;;;;;;;;x
 EVTNAME8470;Poor Sanitation in $CAPITAL$;;;;;;;;;;;;;x
 EVTDESC8470;$CAPITAL$ is an old city. There’s no doubt its growth lacked a bit of planning. It’s a big, overpopulated, and crowded city. Sanitation has always been a problem in such old, unplanned cities, and as the population increases, it gets worse. At this point, we are seeing upwards of 10,000 deaths per year caused by sanitation-related diseases. Our capital is starting to get a bad name - a “plagued city,” they say.;;;;;;;;;;;;;x
 EVTOPTA8470;It's time to reorganize the city! Bulldoze everything down!;;;;;;;;;;;;;x
