Event for when brazil gets gp

--- a/TGC/localisation/00_events_0001000.csv
+++ b/TGC/localisation/00_events_0001000.csv
@@ -1230,13 +1230,17 @@ EVTOPTA8246;Let them come.;;;;;;;;;;;;;x
 EVTNAME8247;Unneasy Alliance;;;;;;;;;;;;;x
 EVTDESC8247;The USA seems to be aware of our plans in South America, at first we were expecting them to be against our actions, but they actually proposed an alliance. We together against the Old World, in an alliance to make the New World the nations of the future.;;;;;;;;;;;;;x
 EVTOPTA8247;So be it, we in the south, them in the north!;;;;;;;;;;;;;x
-EVTOPTA8247;We don't need them, the New World is OURS alone.;;;;;;;;;;;;;x
+EVTOPTB8247;We don't need them, the New World is OURS alone.;;;;;;;;;;;;;x
 EVTNAME8248;Brazil accepts the offer!;;;;;;;;;;;;;x
 EVTDESC8248;The Brazilians have accepted our offer. I wonder what the Old World will think about this...;;;;;;;;;;;;;x
 EVTOPTA8248;Great!;;;;;;;;;;;;;x
 EVTNAME8249;Brazil rejects the offer!;;;;;;;;;;;;;x
 EVTDESC8249;The Brazilians have rejected our generous offer! We have no option but to stop them now, if they don't want to be with us in the top, we will be there alone.;;;;;;;;;;;;;x
 EVTOPTA8249;So be it, they left us with no other options.;;;;;;;;;;;;;x
+EVTNAME8250;Brazil is out of control;;;;;;;;;;;;;x
+EVTDESC8250;The brazilians have, once again, expanded their claws into their neighbours, this is getting out of control. ;;;;;;;;;;;;;x
+EVTOPTA8250; ;;;;;;;;;;;;;x
+EVTOPTB8250; ;;;;;;;;;;;;;x
 EVTNAME8470;Poor Sanitation in $CAPITAL$;;;;;;;;;;;;;x
 EVTDESC8470;$CAPITAL$ is an old city. There’s no doubt its growth lacked a bit of planning. It’s a big, overpopulated, and crowded city. Sanitation has always been a problem in such old, unplanned cities, and as the population increases, it gets worse. At this point, we are seeing upwards of 10,000 deaths per year caused by sanitation-related diseases. Our capital is starting to get a bad name - a “plagued city,” they say.;;;;;;;;;;;;;x
 EVTOPTA8470;It's time to reorganize the city! Bulldoze everything down!;;;;;;;;;;;;;x
@@ -1252,6 +1256,9 @@ EVTNAME8472;The Vaccine Revolt!;;;;;;;;;;;;;x
 EVTDESC8472;Discontent with the government, and now angered by the compulsory vaccination, the people went to the streets! $CAPITAL$ is in chaos! \n\n Vandalism is rampant, there's event rumors about a coup, the situation is getting out of control.;;;;;;;;;;;;;x
 EVTOPTA8472;Send in the police force and crush everyone.;;;;;;;;;;;;;x
 EVTOPTB8472;Fine, secede to their demands and halt the compulsory vaccination.;;;;;;;;;;;;;x
-EVTDESC8475;The village of Paraibuna emerged in the early nineteenth century due to the occupation of the region by families of farmers and settlers coming of the former gold producing region. The county of Paraibuna was separated from Barbacena on May 31, 1850, and was elevated to Paraibuna City in 1856, surpassing the city of São João del Rey. In 1865 the city of Paraibuna was renamed Juiz de Fora.;;;;;;;;;;;;;x
-EVTNAME8475;A City Flourishes;;;;;;;;;;;;;x
-EVTOPTA8475;May the city forever flourish.;;;;;;;;;;;;;x
+EVTNAME8475;A Tropical Greater Power;;;;;;;;;;;;;x
+EVTDESC8475;Brazil, our beloved country, has finally achieved what it was meant to achieve: We are a great power, sitting among the leading nations of the world. We have been always the promised land, the "New World", and indeed the New World will soon outshine the Old. \n\n I can't wait to see what the future holds for us.;;;;;;;;;;;;;x
+EVTOPTA8475;We shall flourish.;;;;;;;;;;;;;x
+EVTDESC8480;The village of Paraibuna emerged in the early nineteenth century due to the occupation of the region by families of farmers and settlers coming of the former gold producing region. The county of Paraibuna was separated from Barbacena on May 31, 1850, and was elevated to Paraibuna City in 1856, surpassing the city of São João del Rey. In 1865 the city of Paraibuna was renamed Juiz de Fora.;;;;;;;;;;;;;x
+EVTNAME8480;A City Flourishes;;;;;;;;;;;;;x
+EVTOPTA8480;May the city forever flourish.;;;;;;;;;;;;;x
