--- a/TGC/localisation/00_events_0001000.csv
+++ b/TGC/localisation/00_events_0001000.csv
@@ -1238,9 +1238,9 @@ EVTNAME8249;Brazil rejects the offer!;;;;;;;;;;;;;x
 EVTDESC8249;The Brazilians have rejected our generous offer! We have no option but to stop them now, if they don't want to be with us in the top, we will be there alone.;;;;;;;;;;;;;x
 EVTOPTA8249;So be it, they left us with no other options.;;;;;;;;;;;;;x
 EVTNAME8250;Brazil is out of control;;;;;;;;;;;;;x
-EVTDESC8250;The brazilians have, once again, expanded their claws into their neighbours, this is getting out of control. ;;;;;;;;;;;;;x
-EVTOPTA8250; ;;;;;;;;;;;;;x
-EVTOPTB8250; ;;;;;;;;;;;;;x
+EVTDESC8250;The brazilians have, once again, showed their claws and expanded into their neighbours, this is getting out of control. \n\n We need to step in, there's no way back now.;;;;;;;;;;;;;x
+EVTOPTA8250;So be it. They are asking for it.;;;;;;;;;;;;;x
+EVTOPTB8250;We can't afford to go to war.;;;;;;;;;;;;;x
 EVTNAME8470;Poor Sanitation in $CAPITAL$;;;;;;;;;;;;;x
 EVTDESC8470;$CAPITAL$ is an old city. There’s no doubt its growth lacked a bit of planning. It’s a big, overpopulated, and crowded city. Sanitation has always been a problem in such old, unplanned cities, and as the population increases, it gets worse. At this point, we are seeing upwards of 10,000 deaths per year caused by sanitation-related diseases. Our capital is starting to get a bad name - a “plagued city,” they say.;;;;;;;;;;;;;x
 EVTOPTA8470;It's time to reorganize the city! Bulldoze everything down!;;;;;;;;;;;;;x
