--- a/TGC/localisation/00_war-cb.csv
+++ b/TGC/localisation/00_war-cb.csv
@@ -429,3 +429,6 @@ take_claimed_land;Enforce Claims;;;;;;;;;;;;;x
 take_claimed_land_desc;Forcefully take claimed lands.;;;;;;;;;;;;;x
 take_claimed_land_setup;Forcefully take claimed lands;;;;;;;;;;;;;x
 take_claimed_land_short;Forcefully take claimed lands;;;;;;;;;;;;;x
+new_world_hegemony_desc;Become the leading power in the New World.;;;;;;;;;;;;;x
+new_world_hegemony_setup;Become the leading power in the New World.;;;;;;;;;;;;;x
+new_world_hegemony_short;Become the leading power in the New World.;;;;;;;;;;;;;x
