--- a/TGC/localisation/00_war-names.csv
+++ b/TGC/localisation/00_war-names.csv
@@ -465,3 +465,5 @@ NORMAL_WAR_UNIFICATION_NAME_PRU_FRA;$ORDER$Franco–Prussian War;$ORDER$ guerre fr
 NORMAL_WAR_UNIFICATION_NAME_SAR_AUS;The $ORDER$Italian War of Independence;;;;;;;;;;;;;x
 NORMAL_WAR_UNIFICATION_NAME_SAR_KUK;The $ORDER$Italian War of Independence;;;;;;;;;;;;;x
 NORMAL_WAR_WEBSTER_ASHBURTON;The Aroostook War;;;;;;;;;;;;;x
+NORMAL_NEW_WORLD_HEGEMONY;$FIRST$–$SECOND$ War of New World's Hegemony;;;;;;;;;;;;;x
+AGRESSION_NEW_WORLD_HEGEMONY;$FIRST$–$SECOND$ War of New World's Hegemony;;;;;;;;;;;;;x
