Improved options to deal with quilombos

--- a/TGC/localisation/00_events_0100000.csv
+++ b/TGC/localisation/00_events_0100000.csv
@@ -405,7 +405,8 @@ EVTNAME187907;Declaration of Independence;;;;;;;;;;;;;x
 EVTOPTA187907;Damned secessionists!;;;;;;;;;;;;;x
 EVTDESC187908;A Quilombo, a settlement made up of escaped slaves in $PROVINCENAME$ has been found!;;;;;;;;;;;;;x
 EVTNAME187908;Escaped Slaves Found;;;;;;;;;;;;;x
-EVTOPTA187908;Excellent work!;;;;;;;;;;;;;x
+EVTOPTA187908;Those rascals!;;;;;;;;;;;;;x
+EVTOPTB187908;Be fair with them, they only wanted their freedom.;;;;;;;;;;;;;x
 EVTDESC187909;With New York state cutting off our land connection to New England, the representatives of Connetticut, Rhode Island, Massachusetts, Vermont, New Hampshire and Maine have come to us with a petition for independence. While we could force them to remain in the Union, this will likely reflect badly on our international standing, especially after the secession of New York state.;;;;;;;;;;;;;x
 EVTNAME187909;New England Secedes!;;;;;;;;;;;;;x
 EVTOPTA187909;Damned secessionists!;;;;;;;;;;;;;x
@@ -416,6 +417,7 @@ EVTOPTA187910;This had best not come to violence.;;;;;;;;;;;;;x
 EVTDESC187913;Escaped slaves have formed a Quilombo in this province, a settlement made up of former slaves in hard-to-reach places. It might be some time before we can root them out.;;;;;;;;;;;;;x
 EVTNAME187913;Escaped Slaves;;;;;;;;;;;;;x
 EVTOPTA187913;Find them!;;;;;;;;;;;;;x
+EVTOPTB187913;What can we even do?;;;;;;;;;;;;;x
 EVTDESC187914;The young Dom Pedro II, Emperor of Brazil, is yet too young to rule the country, due to his father abdicating in 1831 in order to restore his daughter Maria to her rightful throne of Portugal. Until the child Emperor is of age, the country will be looked over by parliamentary officials and a court of regents.;;;;;;;;;;;;;x
 EVTNAME187914;Imperial Regency;;;;;;;;;;;;;x
 EVTOPTA187914;He will make a good leader, someday.;;;;;;;;;;;;;x
