--- a/TGC/localisation/00_events_0001000.csv
+++ b/TGC/localisation/00_events_0001000.csv
@@ -1241,6 +1241,12 @@ EVTNAME8250;Brazil is out of control;;;;;;;;;;;;;x
 EVTDESC8250;The brazilians have, once again, showed their claws and expanded into their neighbours, this is getting out of control. \n\n We need to step in, there's no way back now.;;;;;;;;;;;;;x
 EVTOPTA8250;So be it. They are asking for it.;;;;;;;;;;;;;x
 EVTOPTB8250;We can't afford to go to war.;;;;;;;;;;;;;x
+EVTNAME8251;The Fifth Empire is here;;;;;;;;;;;;;x
+EVTDESC8251;We did it. \n\n Brazil is the defacto New World leading power. There's nothing in our way now. \n\n Brazil has been always destined to greatness, as an continental and multicultural empire, we have been always destined to be the next Rome. We now sit at the top of the New World, and soon, of the whole world.;;;;;;;;;;;;;x
+EVTOPTA8251;Deus abençoe o Brasil.;;;;;;;;;;;;;x
+EVTNAME8252;We lost;;;;;;;;;;;;;x
+EVTDESC8252;We lost everything. \n\n Brazilian brothers, it's all over all. We dreamed too high, and we flew too close to the sun.\n\n The dream of a Brazilian super power is now over, sadly, we had the world against us, and we couldn't handle it. We can do nothing but hope our enemies won't be to harsh on our people.;;;;;;;;;;;;;x
+EVTOPTA8252;Deus proteja o Brasil.;;;;;;;;;;;;;x
 EVTNAME8470;Poor Sanitation in $CAPITAL$;;;;;;;;;;;;;x
 EVTDESC8470;$CAPITAL$ is an old city. There’s no doubt its growth lacked a bit of planning. It’s a big, overpopulated, and crowded city. Sanitation has always been a problem in such old, unplanned cities, and as the population increases, it gets worse. At this point, we are seeing upwards of 10,000 deaths per year caused by sanitation-related diseases. Our capital is starting to get a bad name - a “plagued city,” they say.;;;;;;;;;;;;;x
 EVTOPTA8470;It's time to reorganize the city! Bulldoze everything down!;;;;;;;;;;;;;x
