--- a/TGC/localisation/00_events_0001000.csv
+++ b/TGC/localisation/00_events_0001000.csv
@@ -882,8 +882,8 @@ EVTNAME8016;Republican Revolution?;;;;;;;;;;;;;
 EVTDESC8016;The end of slavery had resulted in an explicit shift of support to republicanism by rich and powerful coffee farmers who held great political, economic and social power in the country. To avert a republican backlash, the government adopted a series of credit and military policies and reforms to appease the land owners. The measures made by the government alarmed the civilian republicans and the Positivists in the military corps. They saw that it would undercut support for their own aims, and were emboldened to further action. For them, it had become a case of ‘now or never’. Although there was no desire in Brazil among the majority of the population to change the form of government, the civilian republicans began pressuring the Positivist officers to overthrow the monarchy. The Positivists launched a coup d’état and tried to institute a republic on November 15, 1889. During the whole ordeal Pedro II showed no emotion, as if unconcerned about the outcome. He only commented:;;;;;;;;;;;;;x
 EVTOPTA8016;If this is how it is, I will retire. I worked too much and I’m tired. Now I’ll rest.;;;;;;;;;;;;;x
 EVTOPTB8016;Crush the rebellion!;;;;;;;;;;;;;x
-EVTNAME8017;  ;;;;;;;;;;;;;
-EVTDESC8017;  ;;;;;;;;;;;;;
+EVTNAME8017;A new republic is born!;;;;;;;;;;;;;
+EVTDESC8017;It's finally time for Brazil leave behind the ways of the Old World and embrace the new order. A republic, a true democracy ;;;;;;;;;;;;;
 EVTOPTA8017;  ;;;;;;;;;;;;;
 EVTNAME8018;The Imperial Family;;;;;;;;;;;;;
 EVTDESC8018;After the recent revolution, we were pondering what to do with the royal family. While they where ultimately forced out for a reason, the regime ended in a somewhat peaceful way, and the common folk is mostly unaware of what's going, the royal family is still somewhat well liked, and once the word spread around they may be able to instigate the people against the new regime. \n\nWe could straight up exile them, but we could also let them be.;;;;;;;;;;;;;
@@ -918,7 +918,7 @@ EVTDESC8100;Our army managed to push back the farraupilha army and secure our la
 EVTOPTA8100;This land is rightfully ours!;;;;;;;;;;;;;x
 EVTNAME8101;The Farrapos pushback!;;;;;;;;;;;;;x
 EVTDESC8101;The Farroupilha Army managed to conquer and secure some of our land! This won't be without payback!;;;;;;;;;;;;;x
-EVTOPTA8101;Dammnit!;;;;;;;;;;;;;x
+EVTOPTA8101;Damn it!;;;;;;;;;;;;;x
 EVTNAME8102;A Tomada da Laguna!;;;;;;;;;;;;;x
 EVTDESC8102;We managed to secure the city of Laguna, we can control now the entire province! The locals want to secede into an allied republic named "Juliana Republic".;;;;;;;;;;;;;x
 EVTOPTA8102;Let them be, they will be valuable allies.;;;;;;;;;;;;;x
@@ -927,8 +927,8 @@ EVTNAME8103;A Tomada da Laguna!;;;;;;;;;;;;;x
 EVTDESC8103;The Farrapos managed to secure the city of Laguna, putting on risk the entire province! And now they are calling themselves the "Juliana Republic", yet another bunch of rebels! We should deal with this at once.;;;;;;;;;;;;;x
 EVTOPTA8103;Filthy rebels!;;;;;;;;;;;;;x
 EVTNAME8104;A Queda da Laguna!;;;;;;;;;;;;;x
-EVTDESC8104;Our army managed to take back the city of Laguna! \n \nThis is the end of the so called "Juliana Republic""";;;;;;;;;;;;;x
-EVTOPTA8104;Cheers!;;;;;;;;;;;;;x
+EVTDESC8104;Our army managed to take back the city of Laguna! \n \nThis is the end of the so called ""Juliana Republic"".;;;;;;;;;;;;;x
+EVTOPTA8104;Our land returns!;;;;;;;;;;;;;x
 EVTDESC8105;An Italian has joined our forces and brings much support for the uprising.;;;;;;;;;;;;;x
 EVTNAME8105;New Arrivals;;;;;;;;;;;;;x
 EVTOPTA8105;This will give us the chance we need to win;;;;;;;;;;;;;x
