more missing loc

--- a/TGC/localisation/00_events_0001000.csv
+++ b/TGC/localisation/00_events_0001000.csv
@@ -998,7 +998,7 @@ EVTDESC8167;The Brazilian Army failed to pacify the provinces up north. \n\n We 
 EVTOPTA8167;This is truly a terrible blow to the nation as a whole.;;;;;;;;;;;;;x
 EVTNAME8168;We are free!;;;;;;;;;;;;;x
 EVTDESC8168;We managed to secure our place in the civil war, Brazil is now half broken. Sadly, keeping ourselves together will be a challenge, which, by now, we won't be able to take.;;;;;;;;;;;;;x
-EVTOPTA8168;Cheers!;;;;;;;;;;;;;x
+EVTOPTA8168;So be it.;;;;;;;;;;;;;x
 EVTNAME8170;The end of Brazil.;;;;;;;;;;;;;x
 EVTDESC8170;The country is in shambles.\n\nRevolt after revolt, bad decision after bad decision, the brasilian state got weaker and weaker, the people are restless and distrustful of the government.\n\nThe dreams of a brasilian great power are slowly fading away, maybe it was never meant to be, maybe we should follow the steps of our colonial cousins in the rest of south america and leave behind the idea of a united brasilian state.;;;;;;;;;;;;;x
 EVTOPTA8170;We are brasilians, we will stay as brasilians!;;;;;;;;;;;;;x
